 * Made user.items_fields and user.review_fields volatile.
 * Removed those fields from the default user workflow.

2008-04-01 cjg
 * Fixed function which stopped the review form reading params.

2008-04-02 tdb
 * Don't set the port if it's the default for the URI, fixing #3325
 * Weaken circular references to prevent memory leaks under unusual conditions
    (e.g. EPrints::abort)

2008-04-03 cjg
 * Added option to use a custom citation file in saved search emails.

2008-04-03 cjg
 * Renamed issues to item_issues as a precaution against namespace clashes.
 * Renamed issues_first_seen to item_issues_timestamp as it's more correctly
    descriptive.
 * Added a bunch of fields to item_issues: reported_by, resolved_by, comments
    and status.
 * Renamed issues_count to item_issues_count.
 * Made related changes to issues search and citation.
 * Rendering issues only shows open issues.
 
======================================================================
2008-04-03 - EPRINTS-3.1-beta-1
======================================================================

2008-04-03 cjg
 * EPrint & Document URI's now correctly redirect to the appropriate URL.

2008-04-03 cjg
 * Added user.username and user.name to the staff eprint serach. Closing
    #3236

2008-04-03 cjg
 * Added "views.timestamp" to work like abstracts.timestamp
 * Added regenerate views and regenerate abstracts buttons.

2008-04-03 cjg
 * Added renderer to extras to link DOI's if spotted in value.

2008-04-05 cjg
 * Added a plugin to export history as ical. 
 * Added a history citation to fix a bug that appears to have been 
    introduced by the citation auto-reloader.

2008-04-05 cjg
 * Made a <label> tag surround the checkbox and label in the respond 
    to request screen.

2008-04-05 cjg
 * In History search, now searches username not userid.

2008-04-05 cjg
 * Added (slightly shonky) plugin to convert .doc to .pdf

2008-04-05 cjg
 * Added an optional /plugins/ directory to the repository cfg directory.